# ladapala

./: .gitignore  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_SETUP.md  AUTH_FIX.md  CLAUDE.md  DEPLOYMENT.md  PANDUAN_INSTALASI_DUAL_SYSTEM.md  Panduan_Sistem_Hotel_Kapulaga.docx  Panduan_Sistem_POS_Restoran_Ladapala.docx  RELOAD_FIX.md  SETUP.md  START_ALL.bat  STATUS_ALL.bat  STOP_ALL.bat  TRANSACTION_SALES_FIX.md  create_manual.py  create_manual_resto.py  dev.sh  ecosystem.config.js  package-lock.json  package.json  start.bat  start_all.sh  status_all.sh  stop_all.sh
backend/: API_DOCUMENTATION.md  API_INTEGRATION_TEST_RESULTS.md  API_QUICK_START.md  CLAUDE.md  FLOW.md  PRODUCT_IMAGES_USAGE.md  RECIPE_INTEGRATION_COMPLETE.md  SEED_DATA.md  db.sqlite3  product_images.json  pyproject.toml  requirements.txt  restore_restaurant_data.py  restore_stock_data_from_po.py
backend/apps/hotel/: apps.py  filters.py  models_backup.py  signals.py  urls.py  views_backup.py
backend/apps/restaurant/: admin.py  models.py  permissions.py  reports.py  serializers.py  signals.py  test_api_integration.py  test_kitchen_printer.py  test_models.py  test_moving_average.py  test_order_stock_deduction.py  test_purchase_order.py  test_recipe_system.py  test_stock_transfer.py  test_stock_transfer_api.py  urls.py  viewsets.py
backend/apps/user/: admin.py  models.py  serializers.py  tests.py  urls.py  (+1 more)
backend/core/: settings.py  urls.py
hotel/backend/: db.sqlite3.bak  pyproject.toml  requirements.txt
hotelresto/backend/: README.md  check_task.py  license.py  pyproject.toml  requirements.txt
(+797 files in other folders)
