[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.8.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
]
